--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Contact</title>
   </head>
   <body>
     <h1>🥐 Contact Us</h1>
     <p>
       Please contact us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+      <a href="mailto:hello@croissant.com">hello@croissant.com </a>for more
+      info.
     </p>
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photos</a>
-    <a href="/contact.html">Contact Us</a>
+    <footer>
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photos</a>
+      <a href="/contact.html">Contact Us</a>
+    </footer>
   </body>
 </html>
