--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Croissants</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -14,8 +15,10 @@
       crescent shape and, like other viennoiserie, are made of a layered
       yeast-leavened dough.
     </p>
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photos</a>
-    <a href="/contact.html">Contact Us</a>
+    <footer>
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photos</a>
+      <a href="/contact.html">Contact Us</a>
+    </footer>
   </body>
 </html>
