--- a/photo.html
+++ b/photo.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Photos</title>
   </head>
   <body>
     <h1>🥐 Pictures of delicious croissants</h1>
     <div>
-      <img src="/img/croissants.jpg" alt="Croissants" width="500" />
-      <img src="/img/croissants 1.jpg" alt="Croissants" width="380" />
+      <img src="/img/croissants.jpg" alt="Croissants" />
+      <img src="/img/croissants 1.jpg" alt="Croissants" />
     </div>
-    <a href="/">Homepage</a>
-    <a href="/photo.html">Photos</a>
-    <a href="/contact.html">Contact Us</a>
+    <footer>
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photos</a>
+      <a href="/contact.html">Contact Us</a>
+    </footer>
   </body>
 </html>
