--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="A webpage all about croissants" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Croissants</title>
+    <title>Learn about Croissants at croissant.com</title>
   </head>
   <body>
-    <h1>🥐 Croissant</h1>
+    <h1>🥐 Croissants</h1>
     <p>
       A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
       but mostly associated with France. Croissants are named for its historical
