--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="How to contact croissant.com" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Contact</title>
+    <title>Learn about Croissants at croissant.com</title>
   </head>
   <body>
-    <h1>🥐 Contact Us</h1>
+    <h1>🥐 Contact us for more informatoin about croissants</h1>
     <p>
       Please contact us at
       <a href="mailto:hello@croissant.com">hello@croissant.com </a>for more
