--- a/photo.html
+++ b/photo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Learn about Croissants at croissant.com</title>
+    <title>See pictures of Croissants at croissant.com</title>
   </head>
   <body>
     <h1>🥐 Pictures of delicious croissants</h1>
