--- a/photo.html
+++ b/photo.html
@@ -15,9 +15,9 @@
       <img src="/img/croissants 1.jpg" alt="Croissants" />
     </div>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photos</a>
-      <a href="/contact.html">Contact Us</a>
+      <a href="/" title="Home">Homepage </a>
+      <a href="/photo.html" title="Photos of croissants">Photos</a>
+      <a href="/contact.html" title="Contact Us">Contact Us</a>
     </footer>
   </body>
 </html>
