--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
       info.
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photos</a>
-      <a href="/contact.html">Contact Us</a>
+      <a href="/" title="Home">Homepage </a>
+      <a href="/photo.html" title="Photos of croissants">Photos</a>
+      <a href="/contact.html" title="Contact Us">Contact Us</a>
     </footer>
   </body>
 </html>
