--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       yeast-leavened dough.
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photos</a>
-      <a href="/contact.html">Contact Us</a>
+      <a href="/" title="Home">Homepage </a>
+      <a href="/photo.html" title="Photos of croissants">Photos</a>
+      <a href="/contact.html" title="Contact Us">Contact Us</a>
     </footer>
   </body>
 </html>
